# docs/swagger.json
@@ -25,6 +25,17 @@
                 ],
                 "summary": "Create new chat",
                 "operationId": "createChat",
+                "parameters": [
+                    {
+                        "description": "Parameters for creating a chat.",
+                        "name": "createChatObject",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateChatDTO"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Created",
@@ -61,6 +72,17 @@
                 ],
                 "summary": "Get a list of user chats",
                 "operationId": "getUserChats",
+                "parameters": [
+                    {
+                        "description": "Parameters for getting user chats.",
+                        "name": "getUserChatsObject",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.GetUserChatsDTORequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -100,6 +122,17 @@
                 ],
                 "summary": "Create new message",
                 "operationId": "createMessage",
+                "parameters": [
+                    {
+                        "description": "Parameters for creating a message.",
+                        "name": "createMessageObject",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateMessageDTO"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Created",
@@ -136,6 +169,17 @@
                 ],
                 "summary": "Get a list of chat messages",
                 "operationId": "GetChatMessages",
+                "parameters": [
+                    {
+                        "description": "Parameters for getting chat messages.",
+                        "name": "getChatsMessagesObject",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.GetChatMessagesDRORequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -175,6 +219,17 @@
                 ],
                 "summary": "Create new user",
                 "operationId": "createUser",
+                "parameters": [
+                    {
+                        "description": "Parameters for creating a user.",
+                        "name": "createUserObject",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateUserDTO"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -215,6 +270,65 @@
                 }
             }
         },
+        "models.CreateChatDTO": {
+            "type": "object",
+            "required": [
+                "name",
+                "users"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
+        },
+        "models.CreateMessageDTO": {
+            "type": "object",
+            "required": [
+                "author",
+                "chat",
+                "text"
+            ],
+            "properties": {
+                "author": {
+                    "type": "integer"
+                },
+                "chat": {
+                    "type": "integer"
+                },
+                "text": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateUserDTO": {
+            "type": "object",
+            "required": [
+                "username"
+            ],
+            "properties": {
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.GetChatMessagesDRORequest": {
+            "type": "object",
+            "required": [
+                "chat"
+            ],
+            "properties": {
+                "chat": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.GetUserChatsDTOAnswer": {
             "type": "object",
             "properties": {
@@ -232,6 +346,17 @@
                     "items": {
                         "type": "integer"
                     }
+                }
+            }
+        },
+        "models.GetUserChatsDTORequest": {
+            "type": "object",
+            "required": [
+                "user"
+            ],
+            "properties": {
+                "user": {
+                    "type": "integer"
                 }
             }
         },
