# internal/endpoints/http/handlers/user.go
@@ -34,6 +34,7 @@ func NewUserRoutes(handler *gin.RouterGroup, userService *services.UserService, 
 // @Tags  	    user
 // @Accept      json
 // @Produce     json
+// @Param createUserObject body models.CreateUserDTO true "Parameters for creating a user."
 // @Success     200 {object} models.UserId
 // @Failure	    400 {object} apperror.ErrorJSON
 // @Failure	    500 {object} apperror.ErrorJSON
